--- a/Лекции.md
+++ b/Лекции.md
@@ -1,1 +1,11 @@
 # Piton
+#### Поколение Piton
+Ввод-Вывод данных
+#### Вывод данных. Команда print
+Для вывода данных на экран используется команда Print(). Внутри круглых скобок пишем что хотел вывести на экран, если это текст, то обязательно указываем его внутри кавычек. Кавычки могут быть одинарными или двойными. Только обязательно ставим одинаковые до и после текста.
+
+### Пример:
+
+Print("Привет, мир!")
+
+То что мы пишем в скобках у команды print, называется аргументами или параметрами команды.
