--- a/Лекции.md
+++ b/Лекции.md
@@ -9,3 +9,7 @@
 Print("Привет, мир!")
 
 То что мы пишем в скобках у команды print, называется аргументами или параметрами команды.
+
+***** 12.09.22
+
+Команда "print" позволяет указывать несколько аргументов и в этом случае их нужна разделять запятыми. Print "Скоро я", "буду программировать", "на языке", "Python"
