--- a/Лекции.md
+++ b/Лекции.md
@@ -10,6 +10,16 @@ Print("Привет, мир!")
 
 То что мы пишем в скобках у команды print, называется аргументами или параметрами команды.
 
-***** 12.09.22
+ 12.09.22
 
-Команда "print" позволяет указывать несколько аргументов и в этом случае их нужна разделять запятыми. Print "Скоро я", "буду программировать", "на языке", "Python"
+Команда "print" позволяет указывать несколько аргументов и в этом случае их нужна разделять запятыми. Print "Скоро я", "буду программировать", "на языке", "Python". При написании кода между аргументами команды print, после запятой мы ставим один символ ПРОБЕЛ, сам пробел по большей части на вывод данных не влияет. 
+
+**** Примечание:
+
+Команда print записывается только маленькими буквами и другое написание не допустимо так как в piton'е строчные и заглавные буквы различны.
+
+Каждая последующая команда print выводит указанный текст с новой строки
+
+Команды print с пустым списком аргументов просто вставляет новую пустую строку
+
+
