--- a/Лекции.md
+++ b/Лекции.md
@@ -14,7 +14,7 @@ Print("Привет, мир!")
 
 Команда "print" позволяет указывать несколько аргументов и в этом случае их нужна разделять запятыми. Print "Скоро я", "буду программировать", "на языке", "Python". При написании кода между аргументами команды print, после запятой мы ставим один символ ПРОБЕЛ, сам пробел по большей части на вывод данных не влияет. 
 
-**** Примечание:
+#### Примечание:
 
 Команда print записывается только маленькими буквами и другое написание не допустимо так как в piton'е строчные и заглавные буквы различны.
 
@@ -25,4 +25,31 @@ Print("Привет, мир!")
 https://drive.google.com/drive/folders/1-6gABHCoUtVTXvsColWrXyRE8xAar0BD
 
  13.09.22
+
+Ввод данных-input
+
+Все пред. прошраммы выводили на экран, известные в момент написания, однако выводили на экран текст, которые станут известны только в момент выполнения программы. 
+
+#### Примечание:
+
+Очень часто при считывании данных мы печатаем некоторый текст, чтобы пользователь понимал что именно от него требуется
+
+https://replit.com/@Nikita2430/Piton#main.py
+
+#### Sep, end переменные, PEP 8
+
+По умолчанию команда print() принимает несколько аргументов, выводит их через пробел, после чего ставит перевод строки, это поведение можно изменить испульзую необязательные параметры sep и end
+
+#### Параметр SEP
+
+#### Рассмотрим след. пример
+
+print(a, b, c)
+print(d, e, f)
+
+Необязательный параметр sep команды print() позволяет установить строку с помощью которой будут разделены аргументы при печати
+
+#### Параметр END
+
+Если перевод сроки делать не нужно или требуется указать спец. окончание, то следует явно указать значение параметра для параметра END
 
