--- a/Лекции.md
+++ b/Лекции.md
@@ -56,3 +56,370 @@ print(d, e, f)
 https://replit.com/@Nikita2430/Piton#main.py
 
 https://replit.com/@Nikita2430/Piton#main.py
+
+
+  Работа с целыми числами
+Все предыдущие программы которые мы писали,работали с текстовыми данными.Действительно,команда input() считывает строку текста. Однако во многих случаях нам нужно работать именно с числами.Чтобы в Phyton создать переменную целого типа данных,нужно опустить ковычки при обЪявлении переменной.Рассмотрим следующий код:
+
+num1 = 7
+num2 = 10
+num3 = num1+num2
+
+a=3
+b=2
+print(a+b)
+print(a-b)
+print(a/b)
+print(a*b)
+
+Порядок выполнения операций в Phyton аналогичен порядку выполнению операций математики 
+                             Приобразование типов
+Приобразование строки к целому числу возможно с использованием команды int()
+a ='1992'
+year = int(s)
+
+Таким образом мы переобразовываем из строкового типа данных в числовой
+
+num1=int(input())
+num2=int(input())
+print(num + num2)
+
+Для того чтобы считать одно целое число,мы пишем следующий код:
+num = int(input())
+
+Приобразование целого числа к строке возможно с использованием команды str() мы переобразовали целое число в строку и записали результат в переменную s. Таким образом,переменная num имеет целочисленный тип данных.
+  
+   ***Примичание***
+1.При работе с целочисленными переменными, часто нужно осуществлять присвоение значению переменной целой математической формулы:
+<Имя переменной> = <математическая формула>
+
+2.Cокращение int происходит от английского integer - целый
+3.В большенстве языков программирования переменная целого типа имеет ограничение.В Phyton реализованно так называемое длинная арифметика,то есть,переменная целого типа не имеет ограничений
+4.Минус может использоваться для обозначения отрицательных чисел.А вот +,/,* всегда стоят между 2 переменными
+num1 = -6   #унарный минус
+num2 = 17-7 #бинарный минус
+   22.09.2022
+                                                                 **Модульная математика в Питон.**
+   Дополнительные операции  - Возведение в степень. %- Остаток от делания. //-Целочисленное дело. Возведение в сиепень. Оператор возводит в степень a n возводит число a в степень n. Оператор возникновения в степени  может возводиться не только в положительную степень, но и в отрицательную. Аналогично, основание степени a также может быть числом отрицательным. Оператор вычисления в степени ( ) является правоассоциативным (значение вычисления вычисляется налево) в соответствии с выбором математики. Таким образом, выражение x  y  z вычесляется как x  (y  z). Целочисленное дело Для положительных чисел оператор целочисленного деления ведёт как обычное деление, за исключительных, что он отбрасывает одну десятичную часть результата. При этом необходимо помнить, что результат целочисленного деления не превосходит частное. Другими словами, округление берётся в меньшую сторону (число −4 меньше, чем число −3). Деление с остатком Оператор деления с остатком возвращает обратно от деления двух значений чисел. Примечание Примечание1. Оператор нахождения остатка очень полезен при решении многих задач. Операторы // и % имеют такой же приоритет, как и операторы умножения и обычного деления. Примечание3. Наивысший приоритет имеет оператор связи в степени  . Алгоритм получения n-го числа
+
+
+                                                                     **Условный оператор if/else**
+    Это-Программы должны уметь выполнять разные действия в зависимости от введенных данных. Для принятия решения программа проверяет, истинно или ложно определенное условие.В Python существует несколько способов проверки, и в каждом случае возможны два исхода: истина (True) или ложь (False).
+    Проверка условий и принятие решений по результатам этой проверки называется ветвлением (branching). Программа таким способом выбирает, по какой из возможных ветвей ей двигаться дальше.В Python проверка условия осуществляется при помощи ключевого слова if.
+    Двоеточие (:) в конце строки с инструкцией if сообщает интерпретатору Python, что дальше находится блок команд. В блок команд входят все строки с отступом под строкой с инструкцией if, вплоть до следующей строки без отступа.
+Если условие истинно, выполняется весь расположенный ниже блок. В предыдущем примере блок инструкций составляет третья и четвёртая строки программы.
+ Блоком кода называют объединённые друг с другом строки. Они всегда связаны с определённой частью программы (например, с инструкцией if). В Python блоки кода формируются при помощи ***отступов***.
+ Фото:
+ ![image]https://user-images.githubusercontent.com/112687503/192217928-dff64e45-0c23-4978-8832-593743143feb.png
+ 
+ если условие ложно мы используем else:
+Отступ — небольшое смещение строки кода только вправо. В начале такой строки находятся пробелы, и поэтому она на несколько символов отстоит от левого края.
+По соглашению PEP 8, для отступа блоков кода используются ***4 пробела***.(табуляция)
+![image]https://user-images.githubusercontent.com/112687503/192220001-b0650fb1-1126-4b3b-9b05-2233598177d1.png
+
+    **Операторы сравнения**
+Можно заметить, что в проверке условия мы использовали двойное равенство (==), вместо ожидаемого одиночного (=). Не стоит путать оператор присваивания (=) с условным оператором (==).
+Для проверки двух элементов на равенство Python использует удвоенный знак равно (==)
+(Один знак равенства оператор присваивания)присваивает переменным значением.
+В Python существует 6 основных операторов сравнения.
+![image](https://user-images.githubusercontent.com/112687503/192221063-536b6e4f-c7f0-47a5-9188-7dcba96fcfd4.png)
+Пример:![image](https://user-images.githubusercontent.com/112687503/192221412-b1b9fc29-7388-4c24-b6cd-ed2413b08ef5.png)
+!=неравенство
+==равенство
+        ***Цепочки сравнений***
+Операторы сравнения в Python можно объединять в цепочки (в отличии от большинства других языков программирования, где для этого нужно использовать логические связки), например, a == b == c или 1 <= x <= 10. Следующий код проверяет, находится ли значение переменной age в диапазоне от 3 до 6:
+age = int(input())
+if 3 <= age <= 6:
+print('Вы ребёнок')
+
+Код, проверяющий равенство трех переменных, может выглядеть так:
+if a == b == c:
+    print('числа равны')
+else:
+    print('числа не равны')
+       **Транзитивность**
+Операция равенства является транзитивной. Это означает, что если a == b и b == c, то из этого следует, что a == c. Именно поэтому предыдущий код, проверяющий равенство трёх переменных, работает как полагается. 
+Из курса математики вам могут быть знакомы другие примеры транзитивных операций:
+Отношение порядка если a>b и b>c>\,то a>c
+Параллельность прямых ессли a||b и b||с,то а||c
+Делимость:если а делится на b и b делится на c,то а делится на с
+     Наглядно транзитивность отношения порядка можно понять на таком примере: если сосед слева старше вас  (a>b), а вы старше соседа справа  (b>c), то сосед слева точно старше соседа справа (a>c).
+Операция неравенства (!=), в отличие от операции равенства (==), является нетранзитивной. То есть из того, что a != b и b != c,вовсе не следует, что a != c. Действительно, если вас зовут не так, как соседа слева и не так, как соседа справа, то нет гарантии, что у обоих соседей не окажутся одинаковые имена.
+**%-остаток числа (46.5)
+ответ 5
+//-целые числа спереди (46.5)
+Ответ 46
+else - вывод**
+
+   **Переобразование строки в целое число**
+  Для преобразования строки в целое число мы используем команду int():
+num = int(input()) **#преобразование считанной строки в целое число.
+
+Для преобразования строки в целое число не обязательно использовать команду input(())
+Следующий код преобразует строку 12345 в целое число:
+n = int('12345')
+  Язык Python предоставляет 4 арифметических опертаора для работы с целыми числами (+,+,/,*), а также три дополнительных(%для остатка,// для целочисленного деления и ** для возведения в степень)***
+total =a + b
+diff = a - b
+prod = a * b
+div1 = a \ b
+div2 = a \\ b
+mod = a % b
+exp = a ** b
+    **Числа с плавающей точкой**
+Наравне с целыми числами в Python есть возможность работы с дробными(вещественными) числами.Так,например,числа 2\3,корень 2,пи - являются вещественными и целого типа int  недостаточно для их представления.
+Дробные числа в информатике называют **числами с плавающей точкой.**
+В Python используется тип данных float.
+  В отличие от математики в информатике для разделения целой и дробной части используется точка.
+num = float(input()) #преобразование считанной строки в число сс плавающей точкой
+                  **Модули**
+В Python есть множество разнообразных функций, которые уже реализованны и готовы к использованию. Такие функции упакованы в модули и называются библиотека функций.
+                  **Модуль math**
+Модуль Math - один из важнейших в Python. Предстовляет обширный функционал для проведения вычислений с вещественными числами(числами с плавающей точкой).
+Если необходимо подключить модуль math пользуются командой input
+**import math**
+**from math import* **
+![image](https://user-images.githubusercontent.com/112687503/196395815-04391170-ae4a-4cfe-a137-d54a27cf406c.png)
+![image](https://user-images.githubusercontent.com/112687503/196396191-72bc07b5-57c1-4402-ac3b-1c971cb78a7f.png)
+![image](https://user-images.githubusercontent.com/112687503/196396695-d1a0aa20-507c-4157-a563-fc97b8c263f6.png)
+
+
+   **Цикл for**
+   Одно из преимуществ компьютеров перед людьми - способность повторять одини и те же действия многократно,быстро и совсем не утомляясь.
+В Python существует две основных разновидности циклов:
+
+циклы, повторяющиеся определенное количество раз (for, счетные циклы, counting loops);
+циклы, повторяющиеся до наступления определенного события (while, условные циклы, conditional loops).
+Цикл for замечательно работает, если мы заранее знаем, сколько повторений (итераций) нам требуется сделать.
+
+Рассмотрим код, который распечатает 10 раз слово "Привет":
+for i in range(10):
+  print('Привет')
+
+Структура цикла for в Python выглядит так:
+
+for название_переменной_цикла in range(количество повторений):
+блок кода
+
+Двоеточие (:) в конце строки с инструкцией for сообщает интерпретатору Python, что дальше находится блок команд. В блок команд входят все строки, расположенные с отступом от строки с инструкцией for, вплоть до следующей строки без отступа.
+
+Такая программа считывает 5 чисел и выводит на экран их квадраты вместе с поясняющей надписью. Поскольку вторая и третья строки выделены отступом, Python считает, что это тело цикла, которое выполняется 5 раз. Четвертая строка не содержит отступа, поэтому не является частью цикла и будет выполнена всего один раз, после того как цикл завершится.
+print('A')
+print('B')
+for i in range(5):
+print('C')
+for i in range(10):
+print('D')
+print('E')
+
+   **Переменная цикла**
+Рассмотрим для чего нужна и как работает переменная цикла i
+for i in range(10)
+
+как видно из кода в Python начинается с 0 поскольку переменная цикла i увеличивается каждый раз,то ее можно использовать для отслеживания номери итерации на которой мы находимся в циклическом процессе
+
+for i in range(10)
+print (i+1,'--Привет--')
+    **Имена переменных циклов**
+Ранее говорилось, что имена переменных должны носить осмысленный характер и описывать их назначение. Однако для переменных цикла иногда делается исключения. В программировании для переменных цикла обычно используют буквы i, j, k.
+  Бывают ситуации когда переменная цикла не используется в теле цикла. В таком случае, вместо того, чтобы давать ей имя, мы можем указать символ нижнего подчеркивания _ :
+  for _ in range(5)
+print ('Python-awesome')
+    **Функция range()**
+начение, которое мы указываем в скобках у функции range() обозначает количество итераций цикла, при этом переменная i принимает последовательно значения: 0, 1, 2, 3, 4, 5, 6, 7, 8, 9.
+  Если быть более точным, то мы говорим, что функция range(n) генерирует последовательность чисел от 0 до n-1, а цикл for последовательно перебирает эту последовательность.
+    **Перегрузка range() с двумя параметрами**
+  Если мы хотим начинать последовательность не с 0, а с какого-то другого числа, то мы можем использовать перегрузку функции range() принимающую два параметра. Например, вызов функции range(1, 5) сгенерирует последовательность чисел 1, 2, 3, 4 (будьте внимательны, правая граница не включительно). Если нам нужны числа от 1 до 5 включительно, то мы используем range(1, 6).
+  Таким образом:
+
+1. range(n): создает последовательность чисел 0, 1, 2, 3, ..., n - 1;
+2. range(n, m): создает последовательность чисел n, n + 1, n + 2, ..., m - 2, m - 1.
+  Напишем программу, которая выводит те числа из промежутка [100;999], которые оканчиваются на 7.
+Используя функцию range() с двумя параметрами, получаем:
+ for i in range(100,1000): # перебираем числа от 100 до 999
+if i % 10==7:  #используем остаток от деления на 10,для получения последней цифры
+print(i)
+    **Перегрузка range() с 3 параметрами**
+  Передавая два параметра в функцию range() мы можем генерировать любую последовательность целых чисел с шагом 1. Но, что делать если нужно поменять шаг? Как быть если мы хотим сгенерировать последовательность чисел 5, 10, 15, 20, 25? В этом случае существует еще одна перегрузка функции range(), принимающая три параметра: range(n, m, k). Первый параметр задает старт последовательности, второй параметр задает стоп последовательности и третий – шаг генерации чисел.
+
+Например, вызов функции range(1, 10, 2) создаст последовательность чисел 1, 3, 5, 7, 9, а вызов функции range(5, 30, 5) сгенерирует последовательность 5, 10, 15, 20, 25.
+Напишем программу, которая выводит все четные числа из промежутка [56;170].
+
+Используя функцию range() с тремя параметрами, получаем:
+![image](https://user-images.githubusercontent.com/112687503/196664620-4449974f-fc55-49fa-af34-79bcd7be0d3b.png)
+ **Отрицательный шаг генерации**
+  Если шаг генерации является положительным числом, то генерируемая последовательность будет возрастать. Мы можем указать отрицательный шаг генерации (третий параметр), что приведет к генерированию убывающей последовательности.
+
+В случае отрицательного шага, мы должны гарантировать, что старт последовательности (первый параметр) больше чем конец последовательности (второй параметр).
+
+Например, вызов функции range(20, 16, -1) создаст последовательность чисел 20, 19, 18, 17, а вызов функции range(20, 10, -3) сгенерирует последовательность 20, 17, 14, 11.
+
+Напишем программу, которая отсчитывает от 5 до 1, а затем выводит текст "Взлетаем!!!": 
+![image](https://user-images.githubusercontent.com/112687503/196664732-42f7f333-2ff3-4bce-8803-6e16c3e34116.png)
+
+Ответы на вопросы:
+1)01234567
+2)1234567
+3)3,5,7,9
+4)10,8,6,4,2
+5)5
+
+27.10.2022
+
+   **Цикл while**
+Цикл For замечательно работает,если мы заранее знаем сколько у нас повторений "Итераций" нам потребуется сделать.Но иногда нужно, чтобы цикл выполнялся до наступления некоторого события, и количество итераций в этом случае заранее оценить просто невозможно. И здесь на помощь приходит цикл while.
+И здесь используется цикл while.
+ Структура цикла while в Python выглядит так:
+
+while условие:
+  блок кода
+  Блок команд, который выполняется в цикле while, называется **телом цикла**.
+
+Рассмотрим код, использующий цикл while, который распечатает 10 раз слово Привет:
+
+i = 0
+while i < 10:
+    print('Привет')
+    i += 1
+
+Такой код можно легко заменить циклом for, поскольку мы заранее знаем сколько раз нужно выполнить тело цикла. Однако так бывает не всегда.Напишем программу, которая считывает числа и выводит их квадраты, пока не будет введено -1. При такой постановке задачи мы не можем воспользоваться циклом for, так как не знаем сколько чисел будет предшествовать числу -1.
+
+num = int(input())
+while num != -1:
+    print('Квадрат вашего числа равен:', num * num)
+    num = int(input())
+**Важным являются два момента:
+1. правильная инициализация переменной num;
+2. изменение переменной num внутри цикла while.
+
+  Eсли не изменять переменную num внутри цикла, то можно получить так называемый **бесконечный цикл**, который будет выполняться бесконечно много раз.
+  
+   **Цикл for и цикл while**
+Мы всегда можем заменить цикл for с помощью цикла while. Следующие две программы выводят числа от 0 до 100:
+# используем for
+for i in range(101):
+    print(i)
+
+# используем while
+i = 0
+while i < 101:
+    print(i)
+    i += 1
+
+
+**Считывание данных до стоп значения**
+  Часто при решении задач на цикл while, мы считываем данные, до тех пор пока пользователь не введет некоторое значение, которое называют стоп значением. Напишем программу, которая считывает числа и находит их сумму, до тех пор пока пользователь не введет слово stop:
+  
+text = input()
+total = 0
+while text != 'stop':
+    num = int(text)
+    total += num
+    text = input()
+print('Сумма чисел равна', total)
+  **Бесконечный цикл**
+Всегда, кроме редких случаев, цикл while должен содержать возможность завершиться.То есть в цикле что-то должно сделать проверяемое условие ложным. Если цикл не имеет возможности завершиться, то он называется **бесконечным циклом**.В большинстве случаев следует избегать применения бесконечных циклов.
+
+Пример бесконечного цикла:
+
+i = 0
+total = 0
+while i < 10:
+total += i
+  **Так как в теле цикла не происходит изменения переменной i, то условие i < 10 остается истинным и цикл выполняется бесконечно много раз.
+Бесконечные циклы можно использовать в связке с оператором прерывания break.** 
+
+  **Примечания**
+    
+**Примечание 1.** Цикл while получил свое название из-за характера своей работы: он выполняет некую задачу до тех пор, пока условие является истинным. Слово while на английском означает как раз "пока".
+**Примечание 2.** Цикл while называют циклом с предусловием, поскольку выполнению тела цикла предшествует проверка условия (сначала проверяется условие, а уже затем выполняется тело цикла).
+**Примечание 3.** Однократное выполнение тела цикла называется **итерацией цикла.**
+**Примечание 4.** Цикл while может не выполниться ни одного раза. Например, следующий код:
+
+i = -1
+while i > 0:
+    print('Hello world!')
+    
+не выведет текст, поскольку условие i > 0 ложно с самого начала.
+**Примечание 5.** Графическое представление цикла while имеет вид:
+
+![image](https://user-images.githubusercontent.com/112687503/198229763-8e4727b5-c679-42d0-b058-eacb9d9de3e2.png)
+
+**Примечание 6.** Условие в цикле while, как и в условном операторе if, может содержать логические операции or, and, not. 
+
+While (пока ) total(общее) сщгте(cxtnxbr) При изучении целых чисел (тип данных int), мы говорили про операцию целочисленного деления // и операцию нахождения остатка от деления однного целого числа на другое%. Результатом операции n % 10 является последняя цифра числа и результатом n // 10 является число с удаленной последней цифрой
+
+31.10.2022
+**Оператор прерывания цикла break**
+  **break, continue, else**
+  Иногда бывает нужно прервать выполнение цикла преждевременно. Оператор break прерывает ближайший цикл for или while.
+Усовершенствуем программу, проверяющую число на простоту с помощью оператора break:
+
+Как только мы встречаем делитель отличный от 1 и num, мы меняем значение сигнальной метки и прерываем цикл, поскольку дальнейшее его выполнение лишено смысла: число гарантированно не является простым.
+***Сигнальная метка используется для того чтобы позволить циклу работать более производительно***
+Напишем программу, использующую цикл for, которая считывает 10 чисел и суммирует их до тех пор, пока не обнаружит отрицательное число. В этом случае выполнение цикла прерывается командой break:
+result = 0
+for i in range(10):
+    num = int(input())
+    if num < 0:
+        break
+    result += num
+print(result)
+  Оператор прерывания цикла break удобен в связке с **сигнальными метками**: когда после проверки некоторого условия нам нет смысла продолжать выполнение цикла. Сигнальная метка (флажок) может использоваться, когда надо чтобы одна часть программы узнала, о происходящем в другой части программы.
+
+**Бесконечные циклы**
+  В предыдущих уроках мы говорили о цикле, который не имеет возможности завершиться и назвали его бесконечным циклом. Самый простой способ создать бесконечный цикл в Python – записать следующий код:
+while True:
+    print('Python awesome!')
+Результатом выполнения такого кода будет бесконечное количество строчек текста:
+Python awesome!
+Python awesome!
+.
+.
+.
+Python awesome!
+Python awesome!
+Python awesome!
+Бесконечный цикл продолжает повторяться до тех пор, пока программа не будет прервана. Изучив оператор break, мы получили механизм прерывания бесконечных циклов.
+
+Может показаться, что бесконечные циклы лишены смысла, однако это не совсем так. Например, вы можете написать программу, которая запускается и работает, постоянно принимая запросы на обслуживание. Программный код такой программы может выглядеть так:
+while True:
+    query = get_new_query() #  получаем новый запрос на обработку
+    query.process()         #  обрабатываем запрос
+**Оператор continue**
+  Другая стандартная идиома циклов — пропуск отдельных элементов при переборе. Оператор continue позволяет перейти к следующей итерации цикла for или while до завершения всех команд в теле цикла.
+Напишем программу, которая выводит все числа от 1 до 100, кроме чисел 7, 17, 29 и 78.
+for i in range(1, 101):
+    if i == 7 or i == 17 or i == 29 or i == 78:
+        continue  # переходим на следующую итерацию
+    print(i)
+![image](https://user-images.githubusercontent.com/112687503/198994389-b2c98171-e51f-4f07-b91e-0d8e25272248.png)
+
+   ***Ревью кода***
+  Ревью кода – проверка исходного кода программы с целью обнаружения и исправления ошибок и неточностей, которые остались незамеченными при начальной разработке. 
+В процессе ревью кода могут быть исправлены:
+фактические ошибки;
+производительность кода;
+читабельность кода и ошибки форматирования кода.
+  Целью ревью кода является улучшение качества программного кода и совершенствование навыков программиста.
+Как правило ревью кода выполняет программист с большим опытом.
+**Фактические ошибки**
+К фактическим ошибкам в коде относятся ошибки из-за которых код может работать неверно. По сути, это ошибки относящиеся к алгоритму, который используется в программе для решения задачи.
+
+Среди частых фактических ошибок встречаются:
+
+1. отсутствие начальной инициализации переменной;
+2. неправильная начальная инициализация переменной;
+3. отсутствие отступа (в Python блоки кода выделяются отступами);
+4. неправильные числовые граничные значения, например при использовании функции range();
+5. неправильные граничные сравнения (путаница с >, >= или <, <=);
+6. путаница логических операций or и and и т.д.
+
+**Производительность кода**
+  Под производительностью кода в простейшем случае можно подразумевать то, сколько времени программа тратит на решение задачи. При написании программы, программист должен думать над тем, сколько времени в худшем случае потребуется его программе для решения задачи.
+**Читабельность кода**
+Следует помнить, что наш код должен легко читаться другими программистами. Чтобы этого достичь, следует придерживаться стандарта PEP 8. Обращайте внимание на следующие моменты:
+1. отступы и пробелы: используйте 4 пробела на один уровень отступа и никогда не смешивайте символы табуляции и пробелы;
+названия переменных: используйте говорящие названия для переменных (total, counter, product) и следуйте стилю lower_case_with_underscores (слова из маленьких букв с подчеркиваниями);
+2. пустые строки: дополнительные отступы пустыми строками могут быть изредка полезны для выделения группы логически связанных частей программы: инициализация переменных, основной алгоритм, завершающая проверка и т.д.;
+3. комментарии: комментарии должны являться законченными предложениями. И помните, комментарии, которые противоречат коду, хуже, чем отсутствие комментариев. Всегда исправляйте комментарии, если меняете код!
